--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,74 @@
-**/target/
-**/.project
-**/.settings
-**/.classpath
-**/*.jar
-**/*.log
-**/.vscode
-**/log-camel-lsp.out
-**/*.iml
-**/.idea
+# Maven
+target/
+
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+buildNumber.properties
+dependency-reduced-pom.xml
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+
+# Eclipse STS
+bin/
+tmp/
+
+*.bak
+*.launch
+*~.nib
+*.swp
+*.tmp
+
+.apt_generated
+.classpath
+.factorypath
+.loadpath
+.metadata
+.project
+.recommenders
+.settings
+.springBeans
+.sts4-cache
+
+local.properties
+
+# IntelliJ IDEA
+.idea/
+*.iws
+*.iml
+*.ipr
+
+# VS Code
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Compiled class file
+*.class
+
+# Package Files #
+*.ear
+*.jar
+*.nar
+*.rar
+*.tar.gz
+*.war
+*.zip
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# Misc log files
+*.log
+log-camel-lsp.out
+
+# Windows
+Thumbs.db
+
+# OSX
+.DS_Store
