--- a/camel-archetype-spring-boot-fuse-7-bom/src/main/resources/archetype-resources/src/main/resources/application-dev.properties
+++ b/camel-archetype-spring-boot-fuse-7-bom/src/main/resources/archetype-resources/src/main/resources/application-dev.properties
@@ -1,4 +1,6 @@
-logging.config=classpath:logback.xml
+#set($dollar = '$')
+# configure logging
+logging.config=classpath:logback-dev.xml
 
 # the options from org.apache.camel.spring.boot.CamelConfigurationProperties can be configured here
 camel.springboot.name=${artifactId}
@@ -16,11 +18,20 @@ endpoints.health.enabled = true
 
 cxf.path=/services
 
-camel.component.servlet.mapping.contextPath=/camel/*
+# to reconfigure the camel servlet context-path mapping to use /api/* instead of /camel/*
+camel.component.servlet.mapping.context-path=/api/*
 
-camel.rest.host=localhost
-camel.rest.port=8090
-camel.rest.contextPath=/camel
-camel.rest.apiversion=${version}
+# rest can also be configured here instead in the CamelRouter class
+# rest DSL configuration
+camel.rest.component=servlet
+camel.rest.binding-mode=json
+camel.rest.data-format-property[prettyPrint]=true
+camel.rest.enable-cors=true
+camel.rest.host=${dollar}{server.address:localhost}
+camel.rest.port=${dollar}{server.port:8090}
+camel.rest.context-path=/api
 
-logging.config=classpath:logback-dev.xml
+# rest DSL api-doc configuration
+camel.rest.api-context-path=/api-docs
+camel.rest.api-property[api.title]=${dollar}{camel.springboot.name}
+camel.rest.api-property[api.version]=${version}
