--- a/camel-archetype-spring-boot-fuse-7-bom/src/main/resources/archetype-resources/src/main/resources/application.properties
+++ b/camel-archetype-spring-boot-fuse-7-bom/src/main/resources/archetype-resources/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#set($dollar = '$')
+# configure logging
 logging.config=classpath:logback.xml
 
 # the options from org.apache.camel.spring.boot.CamelConfigurationProperties can be configured here
@@ -6,6 +8,7 @@ camel.springboot.name=${artifactId}
 # lets listen on all ports to ensure we can be invoked from the pod IP
 server.address=0.0.0.0
 management.address=0.0.0.0
+
 # lets use a different management port in case you need to listen to HTTP requests on 8080
 server.port=8080
 management.port=8081
@@ -16,11 +19,20 @@ endpoints.health.enabled = true
 
 cxf.path=/services
 
-camel.component.servlet.mapping.contextPath=/camel/*
+# to reconfigure the camel servlet context-path mapping to use /api/* instead of /camel/*
+camel.component.servlet.mapping.context-path=/api/*
 
-camel.rest.host=localhost
-camel.rest.port=8080
-camel.rest.contextPath=/camel
-camel.rest.apiversion=${version}
+# rest can also be configured here instead in the CamelRouter class
+# rest DSL configuration
+camel.rest.component=servlet
+camel.rest.binding-mode=json
+camel.rest.data-format-property[prettyPrint]=true
+camel.rest.enable-cors=true
+camel.rest.host=${dollar}{server.address:localhost}
+camel.rest.port=${dollar}{server.port:8080}
+camel.rest.context-path=/api
 
-logging.config=classpath:logback.xml
+# rest DSL api-doc configuration
+camel.rest.api-context-path=/api-docs
+camel.rest.api-property[api.title]=${dollar}{camel.springboot.name}
+camel.rest.api-property[api.version]=${version}
